--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -7,6 +7,7 @@
     tools:context=".MypageActivity">
 
     <TextView
+        android:layout_marginTop="200dp"
         android:id="@+id/nickname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
