--- a/app/src/main/res/layout/fragment_skill.xml
+++ b/app/src/main/res/layout/fragment_skill.xml
@@ -32,8 +32,8 @@
             android:layout_gravity="top"
             app:itemBackground="@color/white"
             app:itemIconSize="36dp"
-            app:itemIconTint="@color/black"
-            app:itemTextColor="@color/black"
+            app:itemIconTint="@drawable/menu_item_color"
+            app:itemTextColor="@drawable/menu_item_color"
             app:labelVisibilityMode="unlabeled"
             app:menu="@menu/top_navi">
 
