--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -4,13 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SkillFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginTop="60dp">
 
     <TextView
         android:layout_gravity="center"
         android:text="BMI"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="30dp"/>
 
     <EditText
         android:id="@+id/height"
@@ -49,7 +51,7 @@
         android:layout_gravity="center"/>
 
     <LinearLayout
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
