--- a/app/src/main/res/layout/activity_top0.xml
+++ b/app/src/main/res/layout/activity_top0.xml
@@ -24,6 +24,19 @@
             android:textAlignment="center"
             android:textSize="30dp"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="트레드밀"
+            android:textAlignment="center"
+            android:textSize="30dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="트레드밀"
+            android:textAlignment="center"
+            android:textSize="30dp"/>
+
 
 
 
