--- a/app/src/main/res/layout/activity_pedometer.xml
+++ b/app/src/main/res/layout/activity_pedometer.xml
@@ -46,6 +46,7 @@
         android:id="@+id/resetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/button"
         android:text="Reset"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/stepCountView"
