--- a/app/src/main/res/layout/activity_bottom2.xml
+++ b/app/src/main/res/layout/activity_bottom2.xml
@@ -20,15 +20,15 @@
         <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:videoId="1WOZFpwRwrc" />
+            app:videoId="A2kHURY746E" />
 
         <TextView
             android:textColor="@color/white"
             android:layout_marginTop="30dp"
             android:layout_gravity="center_horizontal"
-            android:layout_width="200dp"
+            android:layout_width="150dp"
             android:layout_height="45dp"
-            android:text="펜들레이 로우"
+            android:text="벤치프레스"
             android:textAlignment="center"
             android:textSize="30dp"
             android:background="@drawable/textview"/>
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
-            android:text="  1. 어깨너비로 양발을 벌리고 일반적인 데드리프트보다 조금 넓게 바벨을 잡는다."
+            android:text="  1. 벤치에 누운상태에서 바벨을 어깨너비보다 조금 넓게 잡고 위로 들어올린다."
             android:textSize="16dp"
             android:textColor="#23346C"
             />
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="  2. 무릎을 살짝 굽히고, 등 하부 기립근 쪽을 평평하게 유지하면서, 시선은 전방을 향한다."
+            android:text="  2. 가슴 근육의 이완을 느끼며 팔을 굽혀 바벨을 가슴 방향으로 내린다."
             android:textSize="16dp"
             android:textColor="#23346C" />
 
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="  3. 2번 자세를 유지하면서 바벨을 복부쪽으로 힘껏 잡아 당긴다."
+            android:text="  3. 가슴 근육의 수축을 느끼며 몸의 수직방향으로 바벨을 밀어올린다."
             android:textSize="16dp"
             android:textColor="#23346C" />
 
