--- a/app/src/main/res/layout/activity_top0.xml
+++ b/app/src/main/res/layout/activity_top0.xml
@@ -7,6 +7,11 @@
     tools:context=".CardViewTEST"
     android:layout_margin="30dp"
     app:cardCornerRadius="30dp">
+    <ImageView
+        android:layout_marginTop="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/bg"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,33 +20,79 @@
         <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:videoId="1WOZFpwRwrc" />
+            app:videoId="A2kHURY746E" />
+
+        <TextView
+            android:textColor="@color/white"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="150dp"
+            android:layout_height="45dp"
+            android:text="벤치프레스"
+            android:textAlignment="center"
+            android:textSize="30dp"
+            android:background="@drawable/textview"/>
+
+
+
+        <TextView
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="운동방법"
+            android:textSize="20dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="트레드밀"
-            android:textAlignment="center"
-            android:textSize="30dp"/>
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
+            android:text="  1. 벤치에 누운상태에서 바벨을 어깨너비보다 조금 넓게 잡고 위로 들어올린다."
+            android:textSize="16dp"
+            android:textColor="#23346C"
+            />
 
         <TextView
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="트레드밀"
-            android:textAlignment="center"
-            android:textSize="30dp"/>
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="  2. 가슴 근육의 이완을 느끼며 팔을 굽혀 바벨을 가슴 방향으로 내린다."
+            android:textSize="16dp"
+            android:textColor="#23346C" />
+
         <TextView
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="트레드밀"
-            android:textAlignment="center"
-            android:textSize="30dp"/>
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="  3. 가슴 근육의 수축을 느끼며 몸의 수직방향으로 바벨을 밀어올린다."
+            android:textSize="16dp"
+            android:textColor="#23346C" />
+
+
         <TextView
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center"
+            android:text="               도구              ㅣ               타입            "
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="트레드밀"
-            android:textAlignment="center"
-            android:textSize="30dp"/>
+            android:layout_height="wrap_content"/>
+
+         <View
+             android:layout_marginTop="10dp"
+             android:background="#9F9696"
+             android:layout_width="wrap_content"
+             android:layout_height="1dp"/>
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            android:text="                   바벨                             무게/횟수            "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 
 
